--- a/src/Infrastructure/Infrastructure.csproj
+++ b/src/Infrastructure/Infrastructure.csproj
@@ -6,9 +6,11 @@
         <Nullable>enable</Nullable>
         <AssemblyName>ConferencePlanner.Infrastructure</AssemblyName>
         <LangVersion>default</LangVersion>
+        <RootNamespace>ConferencePlanner.Infrastructure</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="GreenDonut" Version="12.0.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.0-rc.1.21452.10" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0-rc.1.21451.13" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0-rc.1.21451.13" />
@@ -16,6 +18,10 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Domain\Domain.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Persistence\Repositories" />
     </ItemGroup>
 
 </Project>
