--- a/src/GraphQL/GraphQL.csproj
+++ b/src/GraphQL/GraphQL.csproj
@@ -22,6 +22,7 @@
 
     <ItemGroup>
       <PackageReference Include="HotChocolate.AspNetCore" Version="12.0.1" />
+      <PackageReference Include="HotChocolate.Data" Version="12.0.1" />
       <PackageReference Include="HotChocolate.PersistedQueries.InMemory" Version="12.0.1" />
     </ItemGroup>
 
