--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -12,11 +12,14 @@
     <ItemGroup>
       <PackageReference Include="HotChocolate.Types" Version="12.0.1" />
       <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0-rc.1.21452.10" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0-rc.1.21451.13" />
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Common\Interfaces" />
+      <Folder Include="Attendees\Queries" />
+      <Folder Include="Sessions\Queries" />
+      <Folder Include="Speakers\Queries" />
     </ItemGroup>
 
     <ItemGroup>
