--- a/src/Domain/Domain.csproj
+++ b/src/Domain/Domain.csproj
@@ -9,4 +9,8 @@
         <LangVersion>default</LangVersion>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="Payloads" />
+    </ItemGroup>
+
 </Project>
