--- a/src/GraphQL/GraphQL.csproj
+++ b/src/GraphQL/GraphQL.csproj
@@ -26,4 +26,8 @@
       <PackageReference Include="HotChocolate.PersistedQueries.InMemory" Version="12.0.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Include="NDC_London_2019.json" />
+    </ItemGroup>
+
 </Project>
