refactor: move connection string to config

--- a/src/GraphQL/appsettings.Development.json
+++ b/src/GraphQL/appsettings.Development.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information",
       "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "LocalDbConnection": "Data Source=conferences.db"
   }
 }
