--- a/src/GraphQL/appsettings.json
+++ b/src/GraphQL/appsettings.json
@@ -7,5 +7,8 @@
       "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "LocalDbConnection": "Data Source=conferences.db"
+  }
 }
