--- a/src/GraphQL/Properties/launchSettings.json
+++ b/src/GraphQL/Properties/launchSettings.json
@@ -9,16 +9,6 @@
     }
   },
   "profiles": {
-    "GraphQL": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "launchUrl": "graphql",
-      "applicationUrl": "https://localhost:7235;http://localhost:5052",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
@@ -26,6 +16,29 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    },
+    "ConferencePlanner.GraphQL": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "launchBrowser": true,
+      "launchUrl": "graphql",
+      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "environmentVariables": {
+        "UseInMemoryDatabase": "true",
+        "ASPNETCORE_HTTPS_PORT": "5001",
+        "ASPNETCORE_URLS": "https://+:5001;http://+:5000"
+      },
+      "httpPort": 5000,
+      "useSSL": true,
+      "sslPort": 5001
     }
   }
 }
