fix: correct image build issue

--- a/src/GraphQL/Dockerfile
+++ b/src/GraphQL/Dockerfile
@@ -1,14 +1,17 @@
 ﻿FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
+ENV ASPNETCORE_URLS=http://+:5000
 WORKDIR /app
-EXPOSE 80
-EXPOSE 443
+EXPOSE 5000
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
-COPY ["src/GraphQL/GraphQL/GraphQL.csproj", "GraphQL/"]
-RUN dotnet restore "src/GraphQL/GraphQL/GraphQL.csproj"
+COPY ["src/GraphQL/GraphQL.csproj", "src/GraphQL/"]
+COPY ["src/Application/Application.csproj", "src/Application/"]
+COPY ["src/Domain/Domain.csproj", "src/Domain/"]
+COPY ["src/Infrastructure/Infrastructure.csproj", "src/Infrastructure/"]
+RUN dotnet restore "src/GraphQL/GraphQL.csproj"
 COPY . .
-WORKDIR "/src/GraphQL"
+WORKDIR "/src/src/GraphQL"
 RUN dotnet build "GraphQL.csproj" -c Release -o /app/build
 
 FROM build AS publish
@@ -17,4 +20,4 @@ RUN dotnet publish "GraphQL.csproj" -c Release -o /app/publish
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "GraphQL.dll"]
+ENTRYPOINT ["dotnet", "ConferencePlanner.GraphQL.dll"]
