feat: add `postgres` support

--- a/src/GraphQL/appsettings.json
+++ b/src/GraphQL/appsettings.json
@@ -9,6 +9,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "LocalDbConnection": "Data Source=conferences.db"
-  }
+    "SqliteDbConnection": "",
+    "PostgresDbConnection": ""
+  },
+  "UseSqlite": "false"
 }
