--- a/src/GraphQL/appsettings.Development.json
+++ b/src/GraphQL/appsettings.Development.json
@@ -8,6 +8,8 @@
     }
   },
   "ConnectionStrings": {
-    "LocalDbConnection": "Data Source=conferences.db"
-  }
+    "SqliteDbConnection": "Data Source=conferences.db",
+    "PostgresDbConnection": "Host=kubernetes.docker.internal;Database=ConferencesDb;Username=postgres;Password=1qaz2wsx@"
+  },
+  "UseSqlite": "false"
 }
