--- a/src/GraphQL/GraphQL.csproj
+++ b/src/GraphQL/GraphQL.csproj
@@ -22,8 +22,13 @@
 
     <ItemGroup>
         <PackageReference Include="HotChocolate.AspNetCore" Version="12.0.1" />
+        <PackageReference Include="HotChocolate.AspNetCore.Voyager" Version="10.5.5" />
         <PackageReference Include="HotChocolate.Data" Version="12.0.1" />
         <PackageReference Include="HotChocolate.PersistedQueries.InMemory" Version="12.0.1" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.0-rc.2.21480.5">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
     </ItemGroup>
 
 </Project>
