--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -2,38 +2,46 @@ name: Push to Docker Hub
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
+  workflow_dispatch:
 
 jobs:
   push:
-
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
 
     steps:
-      - name: Check Out Repo 
+      - name: Checkout source
         uses: actions/checkout@v2
 
-      - name: Login to Docker Hub
+      - name: Docker - login to Docker Hub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
-      - name: Set up Docker Buildx
-        id: buildx
+      - name: Docker - setup buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Build and push
+      - name: Docker - setup layer cache
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx/cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: ${{ runner.os }}-buildx-
+
+      - name: Docker - Build and push
         id: docker_build
         uses: docker/build-push-action@v2
         with:
           context: ./
           file: ./src/GraphQL/Dockerfile
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache,mode=max
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/graphql-clean-architecture:latest
 
