fix: correct ci paths

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -5,7 +5,7 @@ on:
     branches: [main]
     paths:
       - '.github/workflows/docker-publish.yml'
-      - './src/**'
+      - 'src/**'
   workflow_dispatch:
 
 jobs:
