--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -6,7 +6,7 @@ on:
       - main
     paths:
       - '.github/workflows/pr-build.yml'
-      - './src/**'
+      - 'src/**'
   workflow_dispatch:
 
 jobs:
