--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -3,7 +3,7 @@ version: '3.4'
 services:
   grapghql:
     environment:
-      - 'UseSqlite=false'
+      - 'UseInMemoryDatabase=false'
       - 'ASPNETCORE_ENVIRONMENT=Staging'
       - 'ConnectionStrings__PostgresDbConnection=Host=host.docker.internal;Database=ConferencesDb;Username=postgres;Password=1qaz2wsx@'
     depends_on:
