--- a/src/GraphQL/appsettings.json
+++ b/src/GraphQL/appsettings.json
@@ -9,8 +9,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqliteDbConnection": "Data Source=conferences.db",
     "PostgresDbConnection": "Host=kubernetes.docker.internal;Database=ConferencesDb;Username=postgres;Password=1qaz2wsx@"
   },
-  "UseSqlite": "true"
+  "UseInMemoryDatabase": "true"
 }
