--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -19,8 +19,7 @@ jobs:
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '6.0.100-rc.2.21505.57'
-          include-prerelease: true
+          dotnet-version: '6.0.201'
 
       - name: Build with dotnet
         run: dotnet build --configuration Release ConferencePlanner.GraphQL.sln
