--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -10,12 +10,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="GreenDonut" Version="12.0.1" />
-        <PackageReference Include="HotChocolate.Data" Version="12.0.1" />
-        <PackageReference Include="HotChocolate.Types" Version="12.0.1" />
-        <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0-rc.2.21480.5" />
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0-rc.2.21480.5" />
+        <PackageReference Include="GreenDonut" Version="12.7.0" />
+        <PackageReference Include="HotChocolate.Data" Version="12.7.0" />
+        <PackageReference Include="HotChocolate.Types" Version="12.7.0" />
+        <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.3" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
     </ItemGroup>
 
     <ItemGroup>
