--- a/src/GraphQL/GraphQL.csproj
+++ b/src/GraphQL/GraphQL.csproj
@@ -21,11 +21,11 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="HotChocolate.AspNetCore" Version="12.0.1" />
+        <PackageReference Include="HotChocolate.AspNetCore" Version="12.7.0" />
         <PackageReference Include="HotChocolate.AspNetCore.Voyager" Version="10.5.5" />
-        <PackageReference Include="HotChocolate.Data" Version="12.0.1" />
-        <PackageReference Include="HotChocolate.PersistedQueries.InMemory" Version="12.0.1" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.0-rc.2.21480.5">
+        <PackageReference Include="HotChocolate.Data" Version="12.7.0" />
+        <PackageReference Include="HotChocolate.PersistedQueries.InMemory" Version="12.7.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.3">
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
