feat: add initial changes for logging

--- a/src/GraphQL/appsettings.json
+++ b/src/GraphQL/appsettings.json
@@ -11,5 +11,6 @@
   "ConnectionStrings": {
     "PostgresDbConnection": "Host=kubernetes.docker.internal;Database=ConferencesDb;Username=postgres;Password=1qaz2wsx@"
   },
-  "UseInMemoryDatabase": "true"
+  "UseInMemoryDatabase": "true",
+  "APPINSIGHTS_INSTRUMENTATIONKEY": ""
 }
