--- a/src/GraphQL/appsettings.Development.json
+++ b/src/GraphQL/appsettings.Development.json
@@ -1,2 +1,9 @@
 {
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "System": "Information",
+      "Microsoft": "Information"
+    }
+  }
 }
